// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OnlineIndicator /> 1`] = `
"<div class=\\"online-indicator online\\">
  <div class=\\"online-indicator-icon\\"></div>
</div>"
`;

exports[`<OnlineIndicator /> 2`] = `
"<div class=\\"online-indicator offline\\">
  <div class=\\"online-indicator-icon\\"></div>
</div>"
`;
